--- a/Va-cay/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Va-cay/Views/Storyboards/Base.lproj/Main.storyboard
@@ -342,21 +342,21 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iSq-CI-cqO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="829" y="1154"/>
+            <point key="canvasLocation" x="706" y="1825"/>
         </scene>
         <!--Hotel Airbnb Location Manager View Controller-->
         <scene sceneID="2hr-A1-GRH">
             <objects>
                 <viewController id="yku-Yu-6fU" customClass="HotelAirbnbLocationManagerViewController" customModule="Va_cay" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="w7n-xZ-aga">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="wVV-Cq-veG">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="635"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="601"/>
                             </mapView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zwg-3P-euN">
-                                <rect key="frame" x="135" y="643" width="144" height="30"/>
+                                <rect key="frame" x="135" y="697" width="144" height="30"/>
                                 <color key="backgroundColor" systemColor="systemGray6Color"/>
                                 <state key="normal" title="Get Current Location">
                                     <color key="titleShadowColor" systemColor="labelColor"/>
@@ -587,14 +587,14 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="itineraryCell" id="Hf2-aO-9K2" customClass="ItineraryTableViewCell" customModule="Va_cay" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="24.5" width="414" height="331"/>
+                                        <rect key="frame" x="0.0" y="24.5" width="414" height="339"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Hf2-aO-9K2" id="QPu-e8-g1F">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="331"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="339"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="nN1-zn-d8x">
-                                                    <rect key="frame" x="70" y="11" width="274" height="309"/>
+                                                    <rect key="frame" x="70" y="11" width="274" height="317"/>
                                                     <subviews>
                                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="qNH-IS-HKg">
                                                             <rect key="frame" x="0.0" y="0.0" width="274" height="31.5"/>
@@ -636,7 +636,7 @@
                                                             </subviews>
                                                         </stackView>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4NX-qG-XJ4">
-                                                            <rect key="frame" x="10" y="55.5" width="254" height="253.5"/>
+                                                            <rect key="frame" x="6" y="55.5" width="262" height="261.5"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" secondItem="4NX-qG-XJ4" secondAttribute="height" multiplier="1:1" id="BOK-xr-KxP"/>
                                                             </constraints>
@@ -847,7 +847,7 @@
                                                         <color key="tintColor" systemColor="systemRedColor"/>
                                                         <state key="normal" image="mappin.and.ellipse" catalog="system"/>
                                                         <connections>
-                                                            <segue destination="yku-Yu-6fU" kind="presentation" id="dGV-Da-kn8"/>
+                                                            <segue destination="yku-Yu-6fU" kind="show" identifier="toHotelAirbnbMapVC" id="dGV-Da-kn8"/>
                                                         </connections>
                                                     </button>
                                                 </subviews>
@@ -909,6 +909,10 @@
                                                                     <rect key="frame" x="0.0" y="29.5" width="85.5" height="29.5"/>
                                                                     <color key="tintColor" systemColor="systemRedColor"/>
                                                                     <state key="normal" image="mappin.and.ellipse" catalog="system"/>
+                                                                    <connections>
+                                                                        <action selector="activitiesMapButtonTapped:" destination="ZFK-4b-qpp" eventType="touchUpInside" id="1pm-P8-692"/>
+                                                                        <segue destination="Jbw-uv-hfN" kind="show" identifier="toActivitiesMapVC" id="vE9-dT-EKZ"/>
+                                                                    </connections>
                                                                 </button>
                                                             </subviews>
                                                         </stackView>
@@ -1368,7 +1372,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="V8X-eh-8x1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1554" y="1154"/>
+            <point key="canvasLocation" x="1468" y="1825"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="0yH-E7-0QM">
@@ -1387,7 +1391,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8jN-qN-iCx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3606" y="1154"/>
+            <point key="canvasLocation" x="3694" y="1825"/>
         </scene>
         <!--Activities Location Search Table View Controller-->
         <scene sceneID="SVu-34-Vkf">
@@ -1431,7 +1435,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Yat-8O-Ao5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4273.913043478261" y="1153.7946428571429"/>
+            <point key="canvasLocation" x="4446" y="1825"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Kgd-TN-QjH">
@@ -1457,7 +1461,7 @@
     </designables>
     <inferredMetricsTieBreakers>
         <segue reference="sUL-gB-KDv"/>
-        <segue reference="2ii-h4-v0S"/>
+        <segue reference="vE9-dT-EKZ"/>
         <segue reference="dGV-Da-kn8"/>
         <segue reference="Zam-a7-cpo"/>
         <segue reference="pcU-1e-Qrk"/>
