--- a/Va-cay/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Va-cay/Views/Storyboards/Base.lproj/Main.storyboard
@@ -144,8 +144,12 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Pm-AV-t5d" customClass="SecondaryButton" customModule="Va_cay" customModuleProvider="target">
-                                <rect key="frame" x="177" y="555.5" width="61" height="48"/>
+                                <rect key="frame" x="167.5" y="555.5" width="80" height="50"/>
                                 <color key="backgroundColor" red="1" green="0.89740139249999995" blue="0.710036695" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="CMF-zw-vgm"/>
+                                    <constraint firstAttribute="width" constant="80" id="WXa-RB-cY3"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <state key="normal" title="Next">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -604,25 +608,25 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="259"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="nN1-zn-d8x">
-                                                    <rect key="frame" x="70" y="11" width="274" height="237"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="nN1-zn-d8x">
+                                                    <rect key="frame" x="44" y="11" width="326" height="237"/>
                                                     <subviews>
                                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="qNH-IS-HKg">
-                                                            <rect key="frame" x="0.0" y="0.0" width="274" height="31.5"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="326" height="43"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(destinationLabel)" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kkU-tw-SCw">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="203" height="31.5"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="232" height="43"/>
                                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yJO-Mb-1gf">
-                                                                    <rect key="frame" x="207" y="0.0" width="31.5" height="31.5"/>
+                                                                    <rect key="frame" x="236" y="0.0" width="43" height="43"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="width" secondItem="yJO-Mb-1gf" secondAttribute="height" multiplier="1:1" id="X1N-PY-cZD"/>
                                                                     </constraints>
                                                                     <color key="tintColor" systemColor="systemRedColor"/>
-                                                                    <state key="normal" image="mappin.and.ellipse" catalog="system">
+                                                                    <state key="normal" image="map1">
                                                                         <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="40"/>
                                                                     </state>
                                                                     <connections>
@@ -631,7 +635,7 @@
                                                                     </connections>
                                                                 </button>
                                                                 <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ODo-JB-36o">
-                                                                    <rect key="frame" x="242.5" y="0.0" width="31.5" height="31.5"/>
+                                                                    <rect key="frame" x="283" y="0.0" width="43" height="43"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="width" secondItem="ODo-JB-36o" secondAttribute="height" multiplier="1:1" id="ySa-qh-S7d"/>
                                                                     </constraints>
@@ -646,8 +650,17 @@
                                                                 </button>
                                                             </subviews>
                                                         </stackView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="date label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qSF-Wf-9qn" customClass="PrimaryLabel" customModule="Va_cay" customModuleProvider="target">
+                                                            <rect key="frame" x="126" y="43" width="74.5" height="30"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="30" id="zuW-VK-4kV"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4NX-qG-XJ4">
-                                                            <rect key="frame" x="46" y="55.5" width="182" height="181.5"/>
+                                                            <rect key="frame" x="81" y="73" width="164" height="164"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" secondItem="4NX-qG-XJ4" secondAttribute="height" multiplier="1:1" id="BOK-xr-KxP"/>
                                                             </constraints>
@@ -660,8 +673,8 @@
                                                 </stackView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="trailingMargin" secondItem="nN1-zn-d8x" secondAttribute="trailing" constant="50" id="Kh3-Zd-HrY"/>
-                                                <constraint firstItem="nN1-zn-d8x" firstAttribute="leading" secondItem="QPu-e8-g1F" secondAttribute="leadingMargin" constant="50" id="NAr-N7-Ls3"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="nN1-zn-d8x" secondAttribute="trailing" constant="24" id="Kh3-Zd-HrY"/>
+                                                <constraint firstItem="nN1-zn-d8x" firstAttribute="leading" secondItem="QPu-e8-g1F" secondAttribute="leadingMargin" constant="24" id="NAr-N7-Ls3"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="nN1-zn-d8x" secondAttribute="bottom" id="W2A-9b-BnN"/>
                                                 <constraint firstItem="nN1-zn-d8x" firstAttribute="top" secondItem="QPu-e8-g1F" secondAttribute="topMargin" id="iNT-OU-tMA"/>
                                                 <constraint firstItem="nN1-zn-d8x" firstAttribute="centerY" secondItem="QPu-e8-g1F" secondAttribute="centerY" id="oO0-vc-b8r"/>
@@ -669,6 +682,7 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="destinationLabel" destination="kkU-tw-SCw" id="4Eb-dQ-s65"/>
+                                            <outlet property="tripDateLabel" destination="qSF-Wf-9qn" id="def-8e-fDM"/>
                                             <outlet property="tripImageView" destination="4NX-qG-XJ4" id="WFw-8m-FSL"/>
                                         </connections>
                                     </tableViewCell>
@@ -1537,6 +1551,7 @@
         <image name="camera" catalog="system" width="128" height="94"/>
         <image name="chevron.down" catalog="system" width="128" height="72"/>
         <image name="gearshape" catalog="system" width="128" height="121"/>
+        <image name="map1" width="512" height="512"/>
         <image name="mappin.and.ellipse" catalog="system" width="118" height="128"/>
         <image name="plus" catalog="system" width="128" height="113"/>
         <image name="square" catalog="system" width="128" height="114"/>
